src/main/java/fr/univrouen/umlreverse/model/io/parser/plantuml/PlantUMLParser.java
// Generated from /home/tekiflo/dev/uml/projet/src/main/antlr4/PlantUML.g4 by ANTLR 4.5.1
package fr.univrouen.umlreverse.model.io.parser.plantuml;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlantUMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, START_UML=4, END_UML=5, TITLE=6, AS=7, LEFT=8, 
		LEFT_A=9, RIGHT=10, RIGHT_A=11, UP=12, DOWN=13, TOP=14, BOT=15, NOTE=16, 
		LEGEND=17, OF=18, ON=19, LINK=20, END=21, END_NOTE=22, END_LEGEND=23, 
		CLASS=24, ABSTRACT=25, INTERFACE=26, ENUM=27, PACKAGE=28, NAMESPACE=29, 
		IMPLEMENTS=30, EXTENDS=31, ACTOR=32, USECASE=33, RECTANGLE=34, IGNORED=35, 
		LPAREN=36, RPAREN=37, LBRACE=38, RBRACE=39, GT=40, LT=41, DOT=42, MIN=43, 
		PLUS=44, STAR=45, HASH=46, QUOTE=47, DQUOTE=48, DOTS=49, COMMA=50, BAR=51, 
		TILDE=52, ID=53, WS=54, NL=55;
	public static final int
		RULE_entryPoint = 0, RULE_usecaseDiagram = 1, RULE_usecaseDiagramContent = 2, 
		RULE_usecaseEntityDef = 3, RULE_usecaseActorDef = 4, RULE_usecaseCaseDef = 5, 
		RULE_usecaseRectangleDef = 6, RULE_usecaseArrow = 7, RULE_usecaseArrowType = 8, 
		RULE_usecaseArrowID = 9, RULE_usecaseEntityID = 10, RULE_usecaseActorID = 11, 
		RULE_usecaseCaseID = 12, RULE_classDiagram = 13, RULE_classDiagramContent = 14, 
		RULE_classPackageEntity = 15, RULE_classPackageEntityType = 16, RULE_classPackageName = 17, 
		RULE_classEntity = 18, RULE_classEntityType = 19, RULE_classInheritance = 20, 
		RULE_classInheritanceType = 21, RULE_classExternalField = 22, RULE_classField = 23, 
		RULE_classMethod = 24, RULE_classAttribute = 25, RULE_classVisibility = 26, 
		RULE_classFieldNoVisibilityContent = 27, RULE_classFieldContent = 28, 
		RULE_classRelation = 29, RULE_classAssociationClass = 30, RULE_classRelationClass = 31, 
		RULE_classRelationType = 32, RULE_classLollipopHead = 33, RULE_classLollipopTail = 34, 
		RULE_classEntityID = 35, RULE_classEntityNameID = 36, RULE_classPackageID = 37, 
		RULE_commonContent = 38, RULE_title = 39, RULE_note = 40, RULE_noteEntityID = 41, 
		RULE_noteDirection = 42, RULE_noteContent = 43, RULE_noteWord = 44, RULE_endNote = 45, 
		RULE_legend = 46, RULE_legendContent = 47, RULE_legendWord = 48, RULE_endLegend = 49, 
		RULE_comment = 50, RULE_generic = 51, RULE_genericContent = 52, RULE_genericPart = 53, 
		RULE_stereotype = 54, RULE_stereotypeContent = 55, RULE_arrowHead = 56, 
		RULE_arrowBody = 57, RULE_arrowDirection = 58, RULE_arrowTail = 59, RULE_escapedString = 60, 
		RULE_escapedStringContent = 61, RULE_escapedKeywords = 62, RULE_escapedNoteKeyword = 63, 
		RULE_escapedLegendKeyword = 64, RULE_escapedCommonKeyword = 65, RULE_color = 66, 
		RULE_endLine = 67, RULE_endLineNoDoubleDots = 68, RULE_ignoredCommand = 69;
	public static final String[] ruleNames = {
		"entryPoint", "usecaseDiagram", "usecaseDiagramContent", "usecaseEntityDef", 
		"usecaseActorDef", "usecaseCaseDef", "usecaseRectangleDef", "usecaseArrow", 
		"usecaseArrowType", "usecaseArrowID", "usecaseEntityID", "usecaseActorID", 
		"usecaseCaseID", "classDiagram", "classDiagramContent", "classPackageEntity", 
		"classPackageEntityType", "classPackageName", "classEntity", "classEntityType", 
		"classInheritance", "classInheritanceType", "classExternalField", "classField", 
		"classMethod", "classAttribute", "classVisibility", "classFieldNoVisibilityContent", 
		"classFieldContent", "classRelation", "classAssociationClass", "classRelationClass", 
		"classRelationType", "classLollipopHead", "classLollipopTail", "classEntityID", 
		"classEntityNameID", "classPackageID", "commonContent", "title", "note", 
		"noteEntityID", "noteDirection", "noteContent", "noteWord", "endNote", 
		"legend", "legendContent", "legendWord", "endLegend", "comment", "generic", 
		"genericContent", "genericPart", "stereotype", "stereotypeContent", "arrowHead", 
		"arrowBody", "arrowDirection", "arrowTail", "escapedString", "escapedStringContent", 
		"escapedKeywords", "escapedNoteKeyword", "escapedLegendKeyword", "escapedCommonKeyword", 
		"color", "endLine", "endLineNoDoubleDots", "ignoredCommand"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'/''", "''/'", "'o'", "'@startuml'", null, null, "'as'", "'left'", 
		null, "'right'", null, null, null, "'top'", "'bottom'", "'note'", "'legend'", 
		"'of'", "'on'", "'link'", "'end'", "'endnote'", "'endlegend'", "'class'", 
		null, "'interface'", "'enum'", "'package'", "'namespace'", "'implements'", 
		"'extends'", "'actor'", "'usecase'", "'rectangle'", null, "'('", "')'", 
		"'{'", "'}'", "'>'", "'<'", "'.'", "'-'", "'+'", "'*'", "'#'", "'''", 
		"'\"'", "':'", "','", "'|'", "'~'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "START_UML", "END_UML", "TITLE", "AS", "LEFT", 
		"LEFT_A", "RIGHT", "RIGHT_A", "UP", "DOWN", "TOP", "BOT", "NOTE", "LEGEND", 
		"OF", "ON", "LINK", "END", "END_NOTE", "END_LEGEND", "CLASS", "ABSTRACT", 
		"INTERFACE", "ENUM", "PACKAGE", "NAMESPACE", "IMPLEMENTS", "EXTENDS", 
		"ACTOR", "USECASE", "RECTANGLE", "IGNORED", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "GT", "LT", "DOT", "MIN", "PLUS", "STAR", "HASH", "QUOTE", "DQUOTE", 
		"DOTS", "COMMA", "BAR", "TILDE", "ID", "WS", "NL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlantUML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlantUMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EntryPointContext extends ParserRuleContext {
		public TerminalNode START_UML() { return getToken(PlantUMLParser.START_UML, 0); }
		public List<TerminalNode> NL() { return getTokens(PlantUMLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(PlantUMLParser.NL, i);
		}
		public ClassDiagramContext classDiagram() {
			return getRuleContext(ClassDiagramContext.class,0);
		}
		public TerminalNode END_UML() { return getToken(PlantUMLParser.END_UML, 0); }
		public UsecaseDiagramContext usecaseDiagram() {
			return getRuleContext(UsecaseDiagramContext.class,0);
		}
		public EntryPointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entryPoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).enterEntryPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).exitEntryPoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlantUMLVisitor ) return ((PlantUMLVisitor<? extends T>)visitor).visitEntryPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryPointContext entryPoint() throws RecognitionException {
		EntryPointContext _localctx = new EntryPointContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entryPoint);
		int _la;
		try {
			setState(160);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(140);
					match(NL);
					}
				}

				setState(143);
				match(START_UML);
				setState(144);
				match(NL);
				setState(145);
				classDiagram();
				setState(146);
				match(END_UML);
				setState(148);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(147);
					match(NL);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(150);
					match(NL);
					}
				}

				setState(153);
				match(START_UML);
				setState(154);
				match(NL);
				setState(155);
				usecaseDiagram();
				setState(156);
				match(END_UML);
				setState(158);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(157);
					match(NL);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseDiagramContext extends ParserRuleContext {
		public List<UsecaseDiagramContentContext> usecaseDiagramContent() {
			return getRuleContexts(UsecaseDiagramContentContext.class);
		}
		public UsecaseDiagramContentContext usecaseDiagramContent(int i) {
			return getRuleContext(UsecaseDiagramContentContext.class,i);
		}
		public UsecaseDiagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseDiagram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).enterUsecaseDiagram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).exitUsecaseDiagram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlantUMLVisitor ) return ((PlantUMLVisitor<? extends T>)visitor).visitUsecaseDiagram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsecaseDiagramContext usecaseDiagram() throws RecognitionException {
		UsecaseDiagramContext _localctx = new UsecaseDiagramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_usecaseDiagram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << START_UML) | (1L << TITLE) | (1L << NOTE) | (1L << LEGEND) | (1L << ACTOR) | (1L << USECASE) | (1L << RECTANGLE) | (1L << IGNORED) | (1L << LPAREN) | (1L << QUOTE) | (1L << DQUOTE) | (1L << DOTS) | (1L << ID) | (1L << WS) | (1L << NL))) != 0)) {
				{
				{
				setState(162);
				usecaseDiagramContent();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseDiagramContentContext extends ParserRuleContext {
		public UsecaseEntityDefContext usecaseEntityDef() {
			return getRuleContext(UsecaseEntityDefContext.class,0);
		}
		public UsecaseArrowContext usecaseArrow() {
			return getRuleContext(UsecaseArrowContext.class,0);
		}
		public CommonContentContext commonContent() {
			return getRuleContext(CommonContentContext.class,0);
		}
		public UsecaseDiagramContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseDiagramContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).enterUsecaseDiagramContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).exitUsecaseDiagramContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlantUMLVisitor ) return ((PlantUMLVisitor<? extends T>)visitor).visitUsecaseDiagramContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsecaseDiagramContentContext usecaseDiagramContent() throws RecognitionException {
		UsecaseDiagramContentContext _localctx = new UsecaseDiagramContentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_usecaseDiagramContent);
		try {
			setState(171);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				usecaseEntityDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				usecaseArrow();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				commonContent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsecaseEntityDefContext extends ParserRuleContext {
		public UsecaseActorDefContext usecaseActorDef() {
			return getRuleContext(UsecaseActorDefContext.class,0);
		}
		public UsecaseCaseDefContext usecaseCaseDef() {
			return getRuleContext(UsecaseCaseDefContext.class,0);
		}
		public UsecaseRectangleDefContext usecaseRectangleDef() {
			return getRuleContext(UsecaseRectangleDefContext.class,0);
		}
		public UsecaseEntityDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseEntityDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).enterUsecaseEntityDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLListener ) ((PlantUMLListener)listener).exitUsecaseEntityDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlantUMLVisitor ) return ((PlantUMLVisitor<? extends T>)visitor).visitUsecaseEntityDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsecaseEntityDefContext usecaseEntityDef() throws RecognitionException {
		UsecaseEntityDefContext _localctx = new UsecaseEntityDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usecaseEntityDef);
		try {
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				usecaseActorDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				usecaseCaseDef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(175);
				usecaseRectangleDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
